--- a/projects/form-builder/src/app/app.html
+++ b/projects/form-builder/src/app/app.html
@@ -99,6 +99,8 @@
                                 "
                               ></ng-container>
                             </div>
+                          } @else if (field.type === 'picklist') {
+                            <nz-picklist></nz-picklist>>
                           } @else {
                             {{ field.label }} ({{ field.type }})
                           }
