form builder updates

--- a/projects/my-lib/src/lib/layouts/form-builder/src/form-builder.html
+++ b/projects/my-lib/src/lib/layouts/form-builder/src/form-builder.html
@@ -5,7 +5,7 @@
       <div class="form-field-palette" [dragula]="bagFieldsName" [dragulaModel]="availableFields">
         @for (field of availableFields; track field.id) {
           <div
-            class="card mb-2 p-2 draggable-field is-draggable"
+            class="card mb-2 p-2 draggable-field is-draggable main-field"
             [attr.data-component-type]="field.type"
           >
             {{ field.label }}
@@ -30,45 +30,16 @@
           @for (component of components; track component.id; let rIndex = $index) {
             <div
               class="mb-3 p-2 border rounded bg-white is-draggable component-item"
-              [ngClass]="{
-                'is-droppable':
-                  component.type === componentTypeEnum.Row ||
-                  component.type === componentTypeEnum.Column,
-              }"
               [attr.data-component-id]="component.id"
               [attr.data-component-type]="component.type"
               [attr.data-component-index]="rIndex"
-              [dragula]="bagFieldsName"
-              [dragulaModel]="component.childComponents"
             >
-              <div class="d-flex justify-content-between align-items-center mb-2">
-                <strong>{{ component.label }}</strong>
+              <div>
+                {{ component.label }}
+                <i class="pi pi-arrows-alt text-2xl text-muted-color drag-handler"></i>
               </div>
 
-              <div class="d-flex gap-2 component-item-actions">
-                <p-button
-                  icon="pi pi-pencil"
-                  (click)="selectField(component)"
-                  [rounded]="true"
-                  [text]="true"
-                  severity="help"
-                />
-                <p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger" />
-              </div>
-              @if (
-                component.type === componentTypeEnum.Row && component.childComponents.length === 0
-              ) {
-                <div class="alert alert-warning text-center">
-                  <p class="mb-0">Drag a **Column** from the left side components.</p>
-                </div>
-              } @else if (
-                component.type === componentTypeEnum.Column &&
-                component.childComponents.length === 0
-              ) {
-                <div class="alert alert-warning text-center">
-                  <p class="mb-0">Drag a **Field** or **Row** from the left side components.</p>
-                </div>
-              } @else {
+              @if (component.childComponents.length > 0) {
                 <ng-container
                   *ngTemplateOutlet="
                     renderRowTemplate;
@@ -77,6 +48,36 @@
                     }
                   "
                 ></ng-container>
+              }
+
+              @if (
+                component.type === componentTypeEnum.Row ||
+                component.type === componentTypeEnum.Column
+              ) {
+                <div
+                  class="is-droppable"
+                  [attr.data-component-id]="component.id"
+                  [attr.data-component-type]="component.type"
+                  [attr.data-component-index]="rIndex"
+                  [dragula]="bagFieldsName"
+                  [dragulaModel]="component.childComponents"
+                >
+                  @if (
+                    component.type === componentTypeEnum.Row &&
+                    component.childComponents.length === 0
+                  ) {
+                    <div class="alert alert-warning text-center">
+                      <p class="mb-0">Drag a **Column** from the left side components.</p>
+                    </div>
+                  } @else if (
+                    component.type === componentTypeEnum.Column &&
+                    component.childComponents.length === 0
+                  ) {
+                    <div class="alert alert-warning text-center">
+                      <p class="mb-0">Drag a **Field** or **Row** from the left side components.</p>
+                    </div>
+                  }
+                </div>
               }
             </div>
           }
