forgot password new composed

--- a/projects/admin-generator/src/app/features/auth/components/auth-forgot-password/auth-forgot-password.html
+++ b/projects/admin-generator/src/app/features/auth/components/auth-forgot-password/auth-forgot-password.html
@@ -1,3 +1,8 @@
 <app-auth-base>
-  <div content>test forgot password</div>
+  <div content>
+    <nz-forgetpassword-card
+      [config]="forgetpasswordConfig"
+      (login)="goTologin()"
+    ></nz-forgetpassword-card>
+  </div>
 </app-auth-base>
