Account profile updates

--- a/projects/admin-generator/src/app/features/account/components/account-profile/account-profile.html
+++ b/projects/admin-generator/src/app/features/account/components/account-profile/account-profile.html
@@ -1,1 +1,3 @@
-<nz-profile></nz-profile>
+<app-account-base>
+  <nz-profile [config]="Accountprofileconfig" (Login)="gotologin()"></nz-profile>
+</app-account-base>
