new updates to profile adding validators

--- a/projects/admin-generator/src/app/features/account/components/account-base/account-base.html
+++ b/projects/admin-generator/src/app/features/account/components/account-base/account-base.html
@@ -48,7 +48,7 @@
               />
             </g>
           </svg>
-          <ng-content></ng-content>
+          <ng-content select="[content]"></ng-content>
         </div>
       </div>
     </div>
