profile + change password + reset password

--- a/projects/admin-generator/src/app/features/account/components/account-profile/account-profile.html
+++ b/projects/admin-generator/src/app/features/account/components/account-profile/account-profile.html
@@ -2,8 +2,8 @@
   <div content>
     <nz-profile
       [config]="accountProfileConfig"
-      (Login)="gotoLogin()"
-      (successUpdatePassword)="applyUpdatePassword()"
+      (login)="gotoLogin()"
+      (success)="applyUpdatePassword()"
     ></nz-profile>
   </div>
 </app-account-base>
