--- a/projects/my-lib/src/lib/layouts/form-builder/src/form-builder.scss
+++ b/projects/my-lib/src/lib/layouts/form-builder/src/form-builder.scss
@@ -1,134 +1,13 @@
-.container-fluid,
-.row {
-  height: 100vh;
-}
-
-.col-md-3,
-.col-md-6 {
-  height: 100%;
-  overflow-y: auto; /* Enable scrolling for content */
-}
-
-.form-field-palette {
-  min-height: 150px; /* Make sure it's droppable */
-  background-color: #f8f9fa;
-  padding: 10px;
-  border: 1px dashed #ccc;
-  border-radius: 5px;
-}
-
-.draggable-field {
-  cursor: grab;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 8px;
-  user-select: none;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.draggable-field:hover {
-  background-color: #e2f0ff;
-}
-
-.form-preview-area {
-  min-height: 500px;
-  background-color: #f0f2f5;
-  padding: 15px;
-  border: 1px dashed #aaa;
-  border-radius: 8px;
-}
-
-.droppable-area {
-  background-color: #ffffff;
-  border: 1px solid #e0e0e0;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 15px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-}
-
-.form-columns-wrapper {
-  display: flex;
-  flex-wrap: wrap; /* Allows columns to wrap if too many for a single row */
-}
-
-/* Dynamically generated Bootstrap-like column classes */
-.col-12 {
-  flex: 0 0 100%;
-  max-width: 100%;
-}
-.col-6 {
-  flex: 0 0 calc(50% - 10px);
-  max-width: 100%;
-}
-.col-4 {
-  flex: 0 0 33.333333%;
-  max-width: 33.333333%;
-}
-.col-3 {
-  flex: 0 0 25%;
-  max-width: 25%;
-}
-.col-2 {
-  flex: 0 0 16.666667%;
-  max-width: 16.666667%;
-}
-
-.dropped-field {
-  background-color: #eaf5ff;
-  border-color: #b0d8ff;
-}
-
-.selected-field {
-  border: 2px solid #007bff; /* Highlight selected field */
-  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-}
-
-.customization-pane {
-  background-color: #fff;
-}
-/* This is the element Dragula uses while dragging */
+/* Dragged element */
 .gu-mirror {
-  position: fixed !important;
-  pointer-events: none; /* prevent interfering with cursor */
-  z-index: 9999;
+  background: white;
+  border-radius: 0.75rem;
+  box-shadow: 40px rgba(0, 0, 0, 0.2);
   opacity: 0.9;
-  transform: translate(-50%, -50%) scale(1.02); /* centers at cursor */
-  transition: transform 0.05s linear;
-}
-.form-nested-column {
-  width: 100%;
-  max-width: 100%;
+  transform: rotate(2deg);
 }
 
-.component-item {
-  position: relative;
-  .component-item-actions {
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 2;
-    opacity: 0;
-    visibility: hidden;
-    transition:
-      opacity 0.2s linear,
-      visibility 0s linear 0.2s;
-  }
-  &:hover {
-    .component-item-actions {
-      opacity: 1;
-      visibility: visible;
-    }
-  }
-}
-
-.is-draggable {
-  cursor: move !important;
-}
-
-.is-droppable {
-  min-height: 100px;
+/* Item being moved */
+.gu-transit {
+  opacity: 0.4;
 }
