save and retrieve in drag drop + confirm popup refactor

--- a/projects/my-lib/src/lib/layouts/form-builder/src/form-builder.html
+++ b/projects/my-lib/src/lib/layouts/form-builder/src/form-builder.html
@@ -25,6 +25,9 @@
 
   <main class="flex-auto overflow-auto">
     <nz-typography [config]="middleHeading"></nz-typography>
+    <div>
+      <nz-standard-button [config]="saveBtn"></nz-standard-button>
+    </div>
     <ng-template
       #renderRowTemplate
       let-canvascomponents="canvascomponents"
