refactor module build + add migrate module btn

--- a/projects/my-lib/src/lib/layouts/form-builder/src/form-builder.html
+++ b/projects/my-lib/src/lib/layouts/form-builder/src/form-builder.html
@@ -25,8 +25,9 @@
 
   <main class="flex-auto overflow-auto">
     <nz-typography [config]="middleHeading"></nz-typography>
-    <div>
+    <div class="flex gap-2">
       <nz-standard-button [config]="saveBtn"></nz-standard-button>
+      <nz-standard-button [config]="migrateBtn"></nz-standard-button>
     </div>
     <ng-template
       #renderRowTemplate
